# ML_TEST

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  requirements.txt
docs/: CONTEXT_CONSTRAINTS.md  INTERFACE_CONTRACT.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  SESSION_002.md  SESSION_003.md  SESSION_004.md  SESSION_HANDOVER.md  TASK_SPECIFICATION.md  代码框架.txt  流程图.md
src/: __init__.py
src/core/: __init__.py  interfaces.py  models.py  protocols.py  types.py
src/engine/: __init__.py
src/infrastructure/memory/: base_memory.py  local_memory.py
src/infrastructure/snapshot/: __init__.py  base_snapshot.py  json_snapshot.py
src/infrastructure/tracer/: __init__.py  base_tracer.py  console_tracer.py
src/registry/: __init__.py  agent_registry.py  tool_registry.py
tests/: test_initialization.py
tests/infrastructure/: test_memory.py  test_snapshot.py  test_tracer.py
